@@ -1,5 +1,8 @@
 2017-09-05  larissa9839  <larissa9839@gmail.com>
 
+	* tryXpath/scripts/try_xpath_functions.js:
+	Define getItemDetails function.
+
 	* tryXpath/scripts/try_xpath_content.js:
 	Define resetPrev function.
 	Change genericListener.listeners.execute function.
